Tue, 22 Jan 2008 09:42:01 +0100 <thp@perli.net>
Fix problem in gpodder.desktop file

	* bin/gpodder: We're in development again (+svn)
	* data/gpodder.desktop: Fix problem in .desktop file (Thanks to Götz
	Waschk for reporting this bug, detected via desktop-entry-validate)

Tue, 22 Jan 2008 08:20:33 +0100 <thp@perli.net>
gPodder 0.10.4 "Faster Pussycats Kill" released

	* bin/gpodder: gpodder 0.10.4 released :)
	* README: gPodder 0.10.4 released :)
	* doc/man/gpodder.1: gPodder 0.10.4 released :)
	* data/po/de.po: Updated German translation
	* data/messages.pot: Updated from source
	* data/po/*.po: Updated from messages.pot

Tue, 22 Jan 2008 08:13:42 +0100 <thp@perli.net>
Create Bittorrent download directory on startup

	* src/gpodder/libgpodder.py: Create Bittorrent download directory on
	startup, so the first time gPodder preferences are shown, the download
	folder will exist and now throw an error

Mon, 21 Jan 2008 21:41:59 +0100 <thp@perli.net>
Updated French translation file with correct encoding

	* data/po/fr.po: Updated French translation with correct encoding by
	Jérôme Chabod - thanks!

Mon, 21 Jan 2008 10:47:49 +0100 <thp@perli.net>
Add support for sending files via Bluetooth

	* data/gpodder.glade: Add "Bluetooth" configuration page to
	preferences dialog
	* src/gpodder/config.py: Add Bluetooth-related configuration options
	* src/gpodder/gui.py: Add support for sending (and converting) files
	for bluetooth file transfer; add glue code for preferences dialog and
	configuration manager
	* src/gpodder/libgpodder.py: Add "tempdir" variable to gPodderLibClass
	that specifies a temporary directory to be used (currently only for
	converting files for bluetooth transfer, might be migrated to a
	configuration option later)
	* src/gpodder/util.py: Add discover_bluetooth_devices() function that
	searches for nearby devices (either via python-bluez or via hcitool,
	so one of them has to be installed as a dependency); add