@@ -1,3 +1,10 @@
+Tue, 22 Jan 2008 10:09:16 +0100 <thp@perli.net>
+Use Episode Selector for per-channel new episodes
+
+	* src/gpodder/gui.py: Reorganize code to use the episode selector for
+	both all-channels and per-channel new episodes
+	(Closes: http://gpodder.thegithouse.com/show_bug.cgi?id=14)
+
 Tue, 22 Jan 2008 09:42:01 +0100 <thp@perli.net>
 Fix problem in gpodder.desktop file
 
